# ComfyUI_Seedance

./: .gitignore  README.md  __init__.py  nodes.py  pyproject.toml  requirements.txt
core/: client.py  config.py  media.py
examples/: seed-audio-1.0音频生成（识别图片人物）.json  seed-audio-1.0音频生成（语音克隆）.json  seedance_image_to_video.json  seedance_multimodal_video.json  seedance_text_to_video.json  seedream-v5-pro-图像编辑和文生图.json  seedream-v5-pro宽审核图像编辑.json  seedream-v5-pro宽审核文生图.json  vidu-q3图生视频.json  vidu-q3文生视频.json  vidu-q3首尾帧视频.json  wan2.7图生视频宽审核.json  zhenzhen-image-g2图像编辑.json  zhenzhen-image-g2文生图.json  zhenzhen-video-upscaler-视频高清化.json  可灵kling-o3参考生视频.json  可灵kling-o3视频编辑.json  可灵kling-v3.0图生视频首尾帧.json  可灵kling-v3.0文生视频.json  快乐马happy-horse-1.1参考生视频.json  快乐马happy-horse-1.1图生视频.json  快乐马happy-horse-1.1文生视频.json  海螺hailuo-2.3-fast图生视频.json  海螺hailuo-2.3图生视频.json  海螺hailuo-2.3文生视频.json
tests/: test_frontend_extension.py  test_seedream_image.py
web/js/: seedance_api_key_link.js
